2007-01-14  Enrico Tröger  <enrico.troeger@uvena.de>

 * geany.glade, src/build.c, src/document.c, src/geany.h,
   src/highlighting.c, src/interface.c, src/keyfile.c, src/prefs.c,
   src/sci_cb.c, src/sci_wrappers.c, src/sciwrappers.h, src/utils.c,
   src/utils.h:
   Added sci_set_use_tabs().
   Fixed mem leak in sci_cb_auto_forif().
   Moved free_pointers() to utils.c.
   Applied patch from Jeff Pohlmeyer to add an option for using spaces
   or tabulators when inserting some whitespace.
 * src/about.c: Updated copyright information.
 * geany_private.rc, README, src/*.c, src/*.h:
   Updated copyright information.
 * data/filetype_extensions.conf, src/filetypes.c:
   jsp is a Java extension.
 * src/sci_cb.c:
   Enabled auto completion of constructs for filetype JavaScript.


2007-01-14  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/treeviews.c, src/treeviews.h, src/symbols.c, po/POTFILES.in:
   Move treeviews_init_tag_list() and symbol list GtkTreeIters to
   symbols.c.
 * src/highlighting.c:
   Fix segfault when setting Lua filetype.


2007-01-13  Enrico Tröger  <enrico.troeger@uvena.de>

 * data/filetype_extensions.conf, data/filetypes.javascript,
   data/filetypes.lua, scintilla/KeyWords.cxx, scintilla/LexLua.cxx,
   scintilla/Makefile.am, scintilla/makefile.win32, src/filetypes.c,
   src/filetypes.h, src/highlighting.c, src/highlighting.h,
   src/sci_cb.c, src/templates.c, tagmanager/js.c, tagmanager/lua.c,
   tagmanager/Makefile.am, tagmanager/makefile.win32,
   tagmanager/parsers.h: Added new filetypes Javascript and Lua.
 * geany.glade, THANKS, src/geany.h, src/interface.c, src/keyfile.c,
   src/prefs.c, src/sci_cb.c:
   Applied patch from Jeff Pohlmeyer to add an option for disabling DnD
   in the editor widget.


2007-01-13  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/main.c, src/socket.c, po/POTFILES.in:
   Print an error message (instead of debug message) when a
   command-line file cannot be loaded.